[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enrichmap"
version = "0.1.0"
description = "EnrichMap: Spatially informed enrichment analysis for functional interpretation of spatial transcriptomics"
authors = [
    { name = "C. Celik", email = "cenk.celik@proton.me" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
license-files = ["LICENSE*"]

dependencies = [
    "numpy",
    "scanpy",
    "matplotlib",
    "seaborn",
    "dask==2024.11.2",
    "scipy",
    "sklearn",
    "statannotations",
    "squidpy",
    "pygam",
    "scikit-gstat",
    "adjustText",
    "splot"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: OS Independent"
]

[project.urls]
Documentation = "https://enrichmap.readthedocs.io/en/stable"
Homepage = "https://github.com/secrierlab/enrichmap"
Issues = "https://github.com/secrierlab/EnrichMap/issues"
Source = "https://github.com/secrierlab/enrichmap"
Bluesky = "https://bsky.app/profile/cenkcelik.bsky.social"
Twitter = "https://x.com/_cenk"

[tool.hatch.build.targets.wheel]
packages = ["enrichmap"]
