[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "enrichmap"
version = "0.1.7"
description = "EnrichMap: Spatially informed enrichment analysis for functional interpretation of spatial transcriptomics"
authors = [
    { name = "C. Celik", email = "cenk.celik@proton.me" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
license-files = ["LICENSE*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "scanpy",
    "matplotlib",
    "seaborn",
    "scipy",
    "scikit-learn",
    "dask==2024.11.2",
    "statannotations",
    "squidpy",
    "pygam",
    "scikit-gstat",
    "adjustText",
    "splot"
]

[project.urls]
Documentation = "https://enrichmap.readthedocs.io/en/stable"
Homepage = "https://github.com/secrierlab/enrichmap"
Issues = "https://github.com/secrierlab/EnrichMap/issues"
Source = "https://github.com/secrierlab/enrichmap"
Bluesky = "https://bsky.app/profile/cenkcelik.bsky.social"
Twitter = "https://x.com/_cenk"

[tool.hatch.version]
source = "vcs"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["enrichmap"]